--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zombrex",
-  "version": "0.3.4",
+  "version": "0.4.0",
   "description": "small footprint controller framework",
   "main": "zombrex.js",
   "scripts": {
@@ -21,13 +21,15 @@
     "url": "https://github.com/GaneschaLabs-OS/zombrex/issues"
   },
   "dependencies": {
-      "axios": "0.16.1"
+    "axios": "0.16.1"
   },
   "devDependencies": {
-    "rollup-plugin-node-resolve": "3.0.0",
+    "babel-core": "^6.25.0",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-latest": "^6.24.0",
     "rollup-plugin-babel": "^2.7.1",
+    "rollup-plugin-eslint": "^4.0.0",
+    "rollup-plugin-node-resolve": "3.0.0",
     "rollup-plugin-uglify": "^1.0.1"
   },
   "homepage": "https://github.com/GaneschaLabs-OS/zombrex#readme"
