--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zombrex",
-  "version": "0.6.2",
+  "version": "0.7.0",
   "description": "small footprint controller framework",
   "main": "zombrex.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/GaneschaLabs-OS/zombrex.git"
+    "url": "git+https://gitlab.com/GaneschaLabs-OS/zombrex.git"
   },
   "keywords": [
     "controller",
@@ -22,12 +22,12 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "babel-core": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-latest": "^6.24.1",
-    "rollup-plugin-babel": "^3.0.3",
+    "rollup-plugin-babel": "^3.0.4",
     "rollup-plugin-eslint": "^4.0.0",
-    "rollup-plugin-node-resolve": "3.0.3",
+    "rollup-plugin-node-resolve": "3.3.0",
     "rollup-plugin-uglify": "^3.0.0"
   },
   "homepage": "https://github.com/GaneschaLabs-OS/zombrex#readme"
