moving to gitlab

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "author": "Oliver Jessner",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/GaneschaLabs-OS/zombrex/issues"
+    "url": "https://gitlab.com/GaneschaLabs-OS/zombrex/issues"
   },
   "dependencies": {},
   "devDependencies": {
