--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://gitlab.com/GaneschaLabs-OS/zombrex.git"
+    "url": "git+https://github.com/GaneschaLabs-OS/zombrex.git"
   },
   "keywords": [
     "controller",
