--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "zombrex",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "small footprint controller framework",
   "main": "zombrex.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/zombrex-corporation/zombrex"
+  },
+  "scripts": {
+    "start": "rollup -c rollup.config.js"
   },
   "author": "Oliver Jessner",
   "license": "MIT",
